--- a/_config.yml
+++ b/_config.yml
@@ -1,42 +1,37 @@
----
-title: Notes and stuff by Marco Rizzoli
-timezone: UTC
-collections:
-  posts:
-    title: Posts
-    output: true
-  tesi:
-    title: Tesi
-    output: true
-  uploads:
-    title: Uploads
-    output: true
-name: Marco Rizzoli
-author: 
-givenName: Marco
-familyName: Rizzoli
-github: mrizzoli
-url: http://rizzoli.me.uk
-username: mrizzoli
-repo: notes_src
-scholar:
-  style: apa
-  sort_by: year
-  order: descending
-  source: "$PWD/biblio"
-  bibliography: biblio.bib
-tag_page_layout: tag_page
-tag_page_dir: tag
-markdown: Pandoc
-pandoc:
-  extensions:
-  - smart
-  - bibliography: "$PWD/biblio/biblio.bib"
-"-exclude":
-- Gemfile
-- Gemfile.lock
-- Rakefile
-- ".travis.yml"
-"-highlighter": pygments
-"-safe": false
-"-paginate": 6
+# Site settings
+title: "Notes and Stuff"
+email: marco@rizzoli.me.uk
+baseurl: ""
+url: "http://rizzoli.me.uk/"
+title_description: "A dark blog theme for Jekyll focusing on a clear reading experience. Large text and a narrow body makes carte noire a gorgeous read. With excellent code snippet support and integrated tools such as AddThis and Disqus giving your Jekyll blog all the functionality your users expect."
+title_image: "https://www.gravatar.com/avatar/8c19d329a182c796d7f0df65fbfd8434?s=500&d=mm"
+google_analytics: ""
+disqus_account: 
+github_repository: https://github.com/mrizzoli
+addthis_id: 
+post_limit: 5
+
+# Social usernames/URLs
+twitter_username: 
+github_username:  mrizzoli
+instagram_username: 
+reddit_username: 
+linkedin_link: 
+google_plus_link: 
+stackoverflow_link: 
+xing_link:
+facebook_link:
+
+# Footer
+footer_left: "Hosted with <i class=\"fa fa-heart\"></i> by Gh-pages"
+footer_right: "&lt;/&gt; on <a href=\"https://github.com/mrizzoli\">Github</a> &nbsp;<i class=\"fa fa-github-alt\"></i>"
+
+# Build settings
+markdown: kramdown
+
+kramdown:
+  input: GFM
+  syntax_highlighter: rouge
+
+permalink: pretty
+exclude: [vendor]
