--- a/_config.yml
+++ b/_config.yml
@@ -1,19 +1,32 @@
 # Site settings
-title: "Notes and Stuff"
+title: "Notes & Stuff"
+author: "Marco Rizzoli"
 email: marco@rizzoli.me.uk
 baseurl: ""
-url: "http://rizzoli.me.uk/"
+url: http://rizzoli.me.uk
 title_description: ""
 title_image: "https://www.gravatar.com/avatar/8c19d329a182c796d7f0df65fbfd8434?s=500&d=mm"
 google_analytics: ""
 disqus_account: 
-github_repository: https://github.com/mrizzoli
+github_repository: github/mrizzoli
 addthis_id: 
 post_limit: 5
 
-# For a project page here should be a project name. Otherwise (for user's/organizaion's page leave it empty)
-baseurl: ''
+##Defaults values for new posts
 
+defaults:
+  -
+    scope:
+      path: ""
+      type: "posts"
+    values:
+      published: "true"
+      layout: "post"
+      
+
+
+##Social links:
+  
 share:
   facebook: true
   twitter: true
@@ -23,7 +36,7 @@ share:
   email: true
 
 social:
-  github: mrizzoli
+  github: 
   stackoverflow: ''
   linkedin:
   instagram: ''
@@ -39,15 +52,25 @@ yandex_metrica:
 # Set this to your disqus shortname to enable comments. Note that the 'comments'
 # setting below must also be true. Individual posts can override 'comments' to
 # disable on a post-by-post basis
-disqus: mrizzoli
+disqus: 
 comments: false
 
 permalink: /:year/:month/:title
 
-# Enable for using pages, more details are here: http://jekyllrb.com/docs/pagination/
-#paginate: 3
+exclude: ['README.md', 'LICENSE', Gemfile]
 
-#highlighter: rouge
+###This section is to be uncommented to use jekyll-pandoc extension
+###for citations and bibliographic management: doesn't work on github
+###pages, the site has to be built locally (the build environment
+###requires pandoc and pandoc-citeproc) and then uploaded
+
+# scholar:
+#   style: apa
+#   sort_by: year
+#   order: descending
+#   source: $PWD/biblio
+#   bibliography: biblio.bib
+
 # plugins:
 #   - jekyll-pandoc
  
@@ -57,5 +80,4 @@ permalink: /:year/:month/:title
 #   extensions:
 #   - smart
 #   - bibliography: $PWD/biblio/biblio.bib
-
-exclude: ['README.md', 'LICENSE', Gemfile]
+  
