--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,9 @@ author: "Marco Rizzoli"
 email: marco@rizzoli.me.uk
 baseurl: ""
 url: http://rizzoli.me.uk
-title_description: ""
+title_description: "Pagina di presentazione scrollabile verso il basso
+in stile portfolio, l'accesso all'archivio del sito con le categorie e
+le tags clicca sul link nel titolo"
 title_image: "https://www.gravatar.com/avatar/8c19d329a182c796d7f0df65fbfd8434?s=500&d=mm"
 google_analytics: ""
 disqus_account: 
