--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ url: http://rizzoli.me.uk
 title_description: "Pagina di presentazione scrollabile verso il basso
 in stile portfolio, per accedere all'archivio del sito con le categorie e
 le tags clicca sul link nel titolo"
-title_image: "https://www.gravatar.com/avatar/8c19d329a182c796d7f0df65fbfd8434?s=500&d=mm"
+title_image: "css/pics/IMG_20180811_113436.jpg"
 google_analytics: ""
 disqus_account: 
 github_repository: github/mrizzoli
