--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ title: "Notes & Stuff"
 author: "Marco Rizzoli"
 email: marco@rizzoli.me.uk
 baseurl: ""
-url: http://mrizzoli.github.io
+url: https://mrizzoli.github.io
 title_description: "Pagina di presentazione scrollabile verso il basso
 in stile portfolio, per accedere all'archivio del sito con le categorie e
 le tags clicca sul link nel titolo"
