--- a/_config.yml
+++ b/_config.yml
@@ -5,8 +5,7 @@ email: marco@rizzoli.me.uk
 baseurl: ""
 url: https://mrizzoli.github.io
 title_description: "Pagina di presentazione scrollabile verso il basso
-in stile portfolio, per accedere all'archivio del sito con le categorie e
-le tags clicca sul link nel titolo"
+in stile portfolio, per accedere al notebook clicca sul link nel titolo"
 title_image: "https://www.gravatar.com/avatar/8c19d329a182c796d7f0df65fbfd8434?s=500&d=mm" 
 google_analytics: ""
 disqus_account: 
